<resources>
    <string name="app_name">Scanner Keyboard</string>

    <string name="setup_step_camera_title">Allow camera access</string>
    <string name="setup_step_camera_description">Scanner Keyboard uses the camera to scan barcodes and QR codes.</string>
    <string name="setup_step_camera_action">Grant camera permission</string>
    <string name="setup_step_camera_action_settings">Open app settings</string>
    <string name="setup_step_ime_title">Enable the keyboard</string>
    <string name="setup_step_ime_description">Turn on Scanner Keyboard in your input methods so you can type with it.</string>
    <string name="setup_step_ime_action">Open keyboard settings</string>
    <string name="status_granted">Granted</string>
    <string name="status_not_granted">Not granted</string>
    <string name="status_enabled">Enabled</string>
    <string name="status_not_enabled">Not enabled</string>
    <string name="setup_overall_ready">Scanner Keyboard ready</string>
    <string name="setup_next_camera">Next: grant camera access</string>
    <string name="setup_next_ime">Next: enable Scanner Keyboard in settings</string>

    <string name="setup_step_scan_title">Scanning</string>
    <string name="setup_step_scan_description">Translate Enter and Tab keys in scanned data (form filling).</string>
    <string name="setup_step_scan_switch_label">Scan actions</string>

    <string name="ime_label">Scanner Keyboard</string>

    <string name="scanner_hint">Point at a barcode</string>
    <string name="scanner_close_label">✕</string>
    <string name="scanner_close_description">Close scanner</string>
    <string name="scanner_torch_label">Torch</string>
    <string name="scanner_torch_description">Toggle torch</string>
    <string name="scanner_camera_error">Camera could not start</string>
    <string name="scanner_permission_message">Camera access is needed to scan. Open setup to grant it.</string>
    <string name="scanner_open_setup_label">Open setup</string>
    <string name="scanner_open_setup_description">Open setup screen</string>
    <string name="scanner_continuous_label">Continuous</string>

    <string name="history_title">History</string>
    <string name="history_empty">No scanned or copied items yet</string>
    <string name="history_clear_label">CLEAR</string>
    <string name="history_clear_description">Clear history</string>
    <string name="history_close_label">CLOSE</string>
    <string name="history_close_description">Close history</string>

    <string name="key_q">q</string>
    <string name="key_w">w</string>
    <string name="key_e">e</string>
    <string name="key_r">r</string>
    <string name="key_t">t</string>
    <string name="key_y">y</string>
    <string name="key_u">u</string>
    <string name="key_i">i</string>
    <string name="key_o">o</string>
    <string name="key_p">p</string>
    <string name="key_a">a</string>
    <string name="key_s">s</string>
    <string name="key_d">d</string>
    <string name="key_f">f</string>
    <string name="key_g">g</string>
    <string name="key_h">h</string>
    <string name="key_j">j</string>
    <string name="key_k">k</string>
    <string name="key_l">l</string>
    <string name="key_z">z</string>
    <string name="key_x">x</string>
    <string name="key_c">c</string>
    <string name="key_v">v</string>
    <string name="key_b">b</string>
    <string name="key_n">n</string>
    <string name="key_m">m</string>

    <string name="key_shift_label">⇧</string>
    <string name="key_shift_description">Shift</string>
    <string name="key_symbols_label">123</string>
    <string name="key_symbols_description">Numbers and symbols</string>
    <string name="key_abc_label">ABC</string>
    <string name="key_abc_description">Letters</string>
    <string name="key_alt_label">#+=</string>
    <string name="key_alt_description">More symbols</string>
    <string name="key_scan_description">Scan barcode</string>
    <string name="key_hist_description">Clipboard and scan history</string>
    <string name="key_settings_description">App settings</string>
    <string name="key_period_description">Period</string>
    <string name="key_space_description">Space</string>
    <string name="key_enter_label">↵</string>
    <string name="key_enter_description">Enter</string>
    <string name="key_backspace_label">⌫</string>
    <string name="key_backspace_description">Backspace</string>

    <string name="key_num_1">1</string>
    <string name="key_num_2">2</string>
    <string name="key_num_3">3</string>
    <string name="key_num_4">4</string>
    <string name="key_num_5">5</string>
    <string name="key_num_6">6</string>
    <string name="key_num_7">7</string>
    <string name="key_num_8">8</string>
    <string name="key_num_9">9</string>
    <string name="key_num_0">0</string>

    <string name="key_sym_at">@</string>
    <string name="key_sym_hash">#</string>
    <string name="key_sym_dollar">$</string>
    <string name="key_sym_percent" formatted="false">%</string>
    <string name="key_sym_ampersand">&amp;</string>
    <string name="key_sym_hyphen">-</string>
    <string name="key_sym_plus">+</string>
    <string name="key_sym_open_paren">(</string>
    <string name="key_sym_close_paren">)</string>
    <string name="key_sym_asterisk">*</string>
    <string name="key_sym_double_quote">\"</string>
    <string name="key_sym_apostrophe">\'</string>
    <string name="key_sym_colon">:</string>
    <string name="key_sym_semicolon">;</string>
    <string name="key_sym_comma">,</string>
    <string name="key_sym_period">.</string>
    <string name="key_sym_question">?</string>
    <string name="key_sym_exclamation">!</string>
    <string name="key_sym_slash">/</string>

    <string name="key_alt_paren_open">(</string>
    <string name="key_alt_paren_close">)</string>
    <string name="key_alt_backtick">`</string>
    <string name="key_alt_caret">^</string>
    <string name="key_alt_brace_open">{</string>
    <string name="key_alt_brace_close">}</string>
    <string name="key_alt_bracket_open">[</string>
    <string name="key_alt_bracket_close">]</string>
    <string name="key_alt_backslash">\\</string>
    <string name="key_alt_pipe">|</string>
    <string name="key_alt_tilde">~</string>
    <string name="key_alt_less">&lt;</string>
    <string name="key_alt_greater">&gt;</string>
    <string name="key_alt_equals">=</string>
    <string name="key_alt_euro">€</string>
    <string name="key_alt_degree">°</string>
    <string name="test_fields_log_initial">LOG:</string>
    <string name="test_field_multiline">multiline</string>
    <string name="test_field_done">single line, actionDone</string>
    <string name="test_field_search">single line, actionSearch</string>
    <string name="test_field_next">single line, actionNext</string>
    <string name="test_field_go">single line, actionGo</string>
    <string name="test_field_email">email</string>
    <string name="test_field_phone">phone</string>
    <string name="test_field_number">number</string>
    <string name="test_field_password">password</string>
    <string name="open_test_fields">Open field tester</string>
    <string name="key_sym_underscore">_</string>
</resources>
