<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/key_gutter"
    android:paddingEnd="@dimen/key_gutter"
    android:paddingBottom="@dimen/keyboard_bottom_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/key_height"
        android:orientation="horizontal">

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_q"
            style="@style/KeyLetter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1"
            android:contentDescription="@string/key_q"
            android:text="@string/key_q" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_w"
            style="@style/KeyLetter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1"
            android:contentDescription="@string/key_w"
            android:text="@string/key_w" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_e"
            style="@style/KeyLetter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1"
            android:contentDescription="@string/key_e"
            android:text="@string/key_e" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_r"
            style="@style/KeyLetter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1"
            android:contentDescription="@string/key_r"
            android:text="@string/key_r" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_t"
            style="@style/KeyLetter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1"
            android:contentDescription="@string/key_t"
            android:text="@string/key_t" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_y"
            style="@style/KeyLetter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1"
            android:contentDescription="@string/key_y"
            android:text="@string/key_y" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_u"
            style="@style/KeyLetter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1"
            android:contentDescription="@string/key_u"
            android:text="@string/key_u" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_i"
            style="@style/KeyLetter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1"
            android:contentDescription="@string/key_i"
            android:text="@string/key_i" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_o"
            style="@style/KeyLetter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1"
            android:contentDescription="@string/key_o"
            android:text="@string/key_o" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_p"
            style="@style/KeyLetter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1"
            android:contentDescription="@string/key_p"
            android:text="@string/key_p" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/key_height"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_a"
            style="@style/KeyLetter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1"
            android:contentDescription="@string/key_a"
            android:text="@string/key_a" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_s"
            style="@style/KeyLetter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1"
            android:contentDescription="@string/key_s"
            android:text="@string/key_s" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_d"
            style="@style/KeyLetter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1"
            android:contentDescription="@string/key_d"
            android:text="@string/key_d" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_f"
            style="@style/KeyLetter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1"
            android:contentDescription="@string/key_f"
            android:text="@string/key_f" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_g"
            style="@style/KeyLetter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1"
            android:contentDescription="@string/key_g"
            android:text="@string/key_g" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_h"
            style="@style/KeyLetter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1"
            android:contentDescription="@string/key_h"
            android:text="@string/key_h" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_j"
            style="@style/KeyLetter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1"
            android:contentDescription="@string/key_j"
            android:text="@string/key_j" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_k"
            style="@style/KeyLetter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1"
            android:contentDescription="@string/key_k"
            android:text="@string/key_k" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_l"
            style="@style/KeyLetter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1"
            android:contentDescription="@string/key_l"
            android:text="@string/key_l" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/key_height"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_z"
            style="@style/KeyLetter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1"
            android:contentDescription="@string/key_z"
            android:text="@string/key_z" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_x"
            style="@style/KeyLetter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1"
            android:contentDescription="@string/key_x"
            android:text="@string/key_x" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_c"
            style="@style/KeyLetter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1"
            android:contentDescription="@string/key_c"
            android:text="@string/key_c" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_v"
            style="@style/KeyLetter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1"
            android:contentDescription="@string/key_v"
            android:text="@string/key_v" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_b"
            style="@style/KeyLetter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1"
            android:contentDescription="@string/key_b"
            android:text="@string/key_b" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_n"
            style="@style/KeyLetter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1"
            android:contentDescription="@string/key_n"
            android:text="@string/key_n" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_m"
            style="@style/KeyLetter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1"
            android:contentDescription="@string/key_m"
            android:text="@string/key_m" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_backspace"
            style="@style/KeyGlyph"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1.5"
            android:contentDescription="@string/key_backspace_description"
            android:text="@string/key_backspace_label" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/key_height"
        android:orientation="horizontal">

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_shift"
            style="@style/KeyGlyph"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1.5"
            android:contentDescription="@string/key_shift_description"
            android:text="@string/key_shift_label" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_symbols"
            style="@style/KeyWordLabel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="1.5"
            android:contentDescription="@string/key_symbols_description"
            android:enabled="false"
            android:text="@string/key_symbols_label" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_scan"
            style="@style/KeyWordLabel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="2"
            android:contentDescription="@string/key_scan_description"
            android:text="@string/key_scan_label" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_space"
            style="@style/KeyLetter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="3"
            android:contentDescription="@string/key_space_description" />

        <org.ubaierbhat.android.barcodekeyboard.keyboard.KeyView
            android:id="@+id/key_enter"
            style="@style/KeyGlyph"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/key_padding"
            android:layout_marginEnd="@dimen/key_padding"
            android:layout_weight="2"
            android:contentDescription="@string/key_enter_description"
            android:text="@string/key_enter_label" />
    </LinearLayout>
</LinearLayout>
